--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,9 +11,9 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
+	margin: 0px;
+	padding: 0px;
+	border: 0px;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
@@ -28,6 +28,8 @@ body {
 }
 ol, ul {
 	list-style: none;
+	margin: 0px;
+	padding: 0px;
 }
 blockquote, q {
 	quotes: none;
